--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "lucide-react": "^0.542.0",
     "next": "14.2.32",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.10.1",
     "otplib": "^12.0.1",
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.15.0",
